# srp-social-media-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  frontend_run.sh  ml_run.sh  prettify.sh  pyproject.toml  uvicorn_run.sh
.github/workflows/: ci.yml
app/: config.py  main.py
app/database/: connection.py
app/models/: base.py  comment.py  like.py  post.py
app/routers/: admin.py  comments.py  likes.py  posts.py  users.py  ws.py
app/schemas/: admin.py  auth.py  comment.py  like.py  post.py  user.py
app/services/: admin_service.py  comment_service.py  like_service.py  post_service.py  user_service.py
app/tests/: conftest.py  test_comments.py  test_likes.py  test_posts.py  test_users.py
app/utils/: validators.py
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/database/: connection.py
backend/app/models/: user.py
backend/app/routers/: auth.py
backend/app/schemas/: user.py
backend/app/services/: auth_service.py  comment_service.py  like_service.py  ml_service.py  post_service.py
backend/app/tests/: conftest.py  test_auth.py  test_comments.py  test_posts.py  test_users.py
backend/app/utils/: dependencies.py  security.py
frontend/: .dockerignore  Dockerfile  create-post.html  index.html  login.html  main.js  post.html  profile.html  register.html  settings.html  styles.css
ml/: .dockerignore  Dockerfile  extract_hashtags.py  main.py  moderate_text.py  pyproject.toml
ml/routers/: detect_language.py  extract_hashtags.py  moderate_text.py
ml/services/: detect_language.py  moderate_text.py
monitoring/prometheus/: prometheus.yml
