[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "nltk>=3.9.1",
    "torch>=2.7.1",
    "transformers>=4.53.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
]

[tool.uv.dependencies]
prometheus-fastapi-instrumentator = "*"
